--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Story Gen</title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="stylesheets/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
 
@@ -12,6 +14,9 @@
     </div>
 
     {{>part}}
+
+
+    {{>stories}}
 
 
 </div>
