--- a/views/part.html
+++ b/views/part.html
@@ -1,17 +1,61 @@
 <form class="form-horizontal" role="form" method="post" action="/">
+
+
     <div class="form-group">
-        <label for="title" class="col-sm-2 control-label">Email</label>
+        <label for="nodeId" class="col-sm-2 control-label">Story Node Id:</label>
+
+        <div class="col-sm-10">
+            <input class="form-control" id="nodeId" name="nodeId" type="text" placeholder="id" disabled/>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="dayNumber" class="col-sm-2 control-label">Day:</label>
+
+        <div class="col-sm-10">
+            <input class="form-control" id="dayNumber" name="dayNumber" type="text" placeholder="0" disabled/>
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <label for="title" class="col-sm-2 control-label">Title</label>
 
         <div class="col-sm-10">
             <input type="text" class="form-control" id="title" name="title" placeholder="title">
         </div>
     </div>
+
+
+
+
     <div class="form-group">
-        <label for="copy" class="col-sm-2 control-label">Copy</label>
+        <label for="copy" class="col-sm-2 control-label">Story Copy:</label>
 
         <div class="col-sm-10"><textarea class="form-control" id="copy" rows="3" placeholder="copy"
                                          name="copy"></textarea></div>
     </div>
+
+
+    <div class="col-md-12"><h3>Story Choices:</h3></div>
+    <div class="form-group">
+        <label for="choice1" class="col-sm-2 control-label">Choice 1 Copy:</label>
+
+        <div class="col-sm-10"><textarea class="form-control" id="choice1" rows="3" placeholder="First Choice"
+                                         name="choice1"></textarea></div>
+    </div>
+
+    <div class="form-group">
+        <label for="choice2" class="col-sm-2 control-label">Choice 2 Copy:</label>
+
+        <div class="col-sm-10"><textarea class="form-control" id="choice2" rows="3" placeholder="Second Choice"
+                                         name="choice2"></textarea></div>
+    </div>
+
+
+
+
+
 
     <input type="hidden" name="_method" value="put">
 
