figured out how to use handlebars on both server and client side

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,24 +1,33 @@
 @import "bootstrap/css/bootstrap.css";
-.node {
+.sg-node {
   width: 400px;
   padding: 10px;
   border: solid 1px #333;
   margin: 50px auto;
 }
-.choice {
+.sg-choice {
   width: 400px;
   padding: 10px;
   border: solid 1px #e95e11;
   margin: 50px;
   display: inline-block;
 }
-.choice:nth-child(odd):before,
-.choice:nth-child(odd):after {
+.sg-choice:nth-child(odd):before,
+.sg-choice:nth-child(odd):after {
   content: " ";
   /* 1 */
   display: table;
   /* 2 */
 }
-.choice:nth-child(odd):after {
+.sg-choice:nth-child(odd):after {
   clear: both;
+}
+#infovis {
+  height: 1000px;
+  margin: auto;
+  position: relative;
+  width: 1000px;
+}
+.jit-autoadjust-label {
+  padding: 15px;
 }
