--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Story Gen</title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="javascripts/jquery.min.js"></script>
     <script src="javascripts/handlebars.js"></script>
     <script src="stylesheets/bootstrap/js/bootstrap.js"></script>
 
@@ -12,6 +12,7 @@
     <script>
         var socket = io.connect('http://localhost:3000');
         socket.on('news', function (data) {
+            console.log('in socket front')
             console.log(data);
             socket.emit('my other event', { my: 'data' });
         });
