--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,21 +1,20 @@
 @import "bootstrap/css/bootstrap.css";
-.sg-node {
-  width: 400px;
+.sg-node,
+.sg-choice {
+  width: 300px;
   padding: 10px 40px;
   border: solid 1px #333;
   overflow-y: scroll;
   height: 150px;
 }
 .sg-choice {
-  width: 400px;
-  padding: 10px 40px;
   border: solid 2px #e95e11;
-  overflow-y: scroll;
-  height: 150px;
 }
 #infovis {
-  height: 5000px;
+  height: 1000px;
   margin: auto;
   position: relative;
   width: 1200px;
+  border: solid 1px #333;
+  overflow: hidden;
 }
