--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -5,7 +5,7 @@
 
 .sg-node {
   width: 300px;
-  padding: 10px 40px;
+  padding: 10px 40px 10px 10px;
   border: solid 1px #333;
   overflow-y: scroll;
 //  overflow: hidden;
