--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,8 @@
     <script src="stylesheets/bootstrap/js/bootstrap.js"></script>
 
     <script src="javascripts/Jit/jit.js"></script>
+    <script src="javascripts/charting.js"></script>
+
     <script src="/socket.io/socket.io.js"></script>
 
 
@@ -22,14 +24,10 @@
     {{>part}}
 
 
-    {{>stories}}
 
 
 </div>
 
-<!--<div id="chart">-->
-<!--{{>chart}}-->
-<!--</div>-->
 
 
 <!--http://tilomitra.com/handlebars-on-the-server-and-client/-->
@@ -56,229 +54,21 @@
 
 <div id="infovis" class="clearfix"></div>
 <div id="log"></div>
-<div id="right-container">
 
-    <h4>Add Subtrees</h4>
-    <table>
-        <tbody>
-        <tr>
-            <td>
-                Animate:
-            </td>
-            <td>
-                <input type="checkbox" checked="checked" id="animate">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="button" value="Add" id="addSubtree">
-            </td>
-            <td>
-                <input type="button" onclick="window.location = window.location" value="Refresh">
-            </td>
-        </tr>
-        </tbody>
-    </table>
 
-</div>
 
-<div id="temp" style="opacity: 0;"></div>
 
 <script>
-
-
-    var st;
-
-    var labelType, useGradients, nativeTextSupport, animate;
-
-    (function () {
-        var ua = navigator.userAgent,
-                iStuff = ua.match(/iPhone/i) || ua.match(/iPad/i),
-                typeOfCanvas = typeof HTMLCanvasElement,
-                nativeCanvasSupport = (typeOfCanvas == 'object' || typeOfCanvas == 'function'),
-                textSupport = nativeCanvasSupport
-                        && (typeof document.createElement('canvas').getContext('2d').fillText == 'function');
-        //I'm setting this based on the fact that ExCanvas provides text support for IE
-        //and that as of today iPhone/iPad current text support is lame
-        labelType = (!nativeCanvasSupport || (textSupport && !iStuff)) ? 'Native' : 'HTML';
-        nativeTextSupport = labelType == 'Native';
-        useGradients = nativeCanvasSupport;
-        animate = !(iStuff || !nativeCanvasSupport);
-    })();
-
-    var Log = {
-        elem: false,
-        write: function (text) {
-            if (!this.elem)
-                this.elem = document.getElementById('log');
-            this.elem.innerHTML = text;
-            this.elem.style.left = (500 - this.elem.offsetWidth / 2) + 'px';
-        }
-    };
-
-
-    function getHTML(data) {
-        var source = $("#node-template").html();
-        var template = Handlebars.compile(source);
-        var html = template(data);
-        return html;
-    }
-
-
-    function init(json) {
-
-
-
-
-
-        //end
-        var removing = false;
-        //init Spacetree
-
-        if(!st){
-
-
-
-            //Create a new ST instance
-            st = new $jit.ST({
-                orientation: 'top', //when top it won't render past the first level - blargh
-                injectInto: 'infovis',
-                constrained: false, //doesn't seem to override anything - it's supposed to show the whole graph
-                levelsToShow: 20,
-                //add styles/shapes/colors
-                //to nodes and edges
-
-                //set overridable=true if you want
-                //to set styles for nodes individually
-                Node: {
-                    overridable: true,
-    //                autoWidth: true,
-    //                autoHeight: true,
-                    width:300,
-                    height: 150,
-                    color: '#cccccc'
-                },
-                Navigation: {
-                    enable:true,
-                    panning:true
-                },
-                //change the animation/transition effect
-                transition: $jit.Trans.Quart.easeOut,
-
-                onBeforeCompute: function (node) {
-                    Log.write("loading " + node.name);
-                },
-
-                onAfterCompute: function (node) {
-                    Log.write("done");
-                },
-
-                //This method is triggered on label
-                //creation. This means that for each node
-                //this method is triggered only once.
-                //This method is useful for adding event
-                //handlers to each node label.
-                onCreateLabel: function (label, node) {
-                    console.log(node.id)
-                    //add some styles to the node label
-                    var style = label.style;
-                    label.id = node.id;
-                    style.color = '#333';
-                    style.fontSize = '0.8em';
-                    style.textAlign = 'left';
-
-
-                    label.innerHTML = getHTML(node.data);
-
-                    //Delete the specified subtree
-                    //when clicking on a label.
-                    //Only apply this method for nodes
-                    //in the first level of the tree.
-                    if (node._depth == 1) {
-//                        style.cursor = 'pointer';
-//                        label.onclick = function () {
-//                            if (!removing) {
-//                                removing = true;
-//                                Log.write("removing subtree...");
-//                                //remove the subtree
-//                                st.removeSubtree(label.id, true, 'animate', {
-//                                    hideLabels: false,
-//                                    onComplete: function () {
-//                                        removing = false;
-//                                        Log.write("subtree removed");
-//                                    }
-//                                });
-//                            }
-//                        }
-                    };
-                },
-                //This method is triggered right before plotting a node.
-                //This method is useful for adding style
-                //to a node before it's being rendered.
-                onBeforePlotNode: function (node) {
-
-
-
-    //                if (node._depth == 1) {
-    //                    node.data.$color = '#f77';
-    //                }
-                },
-                onAfterPlotNode: function (node) {
-                }
-            });
-            //load json data
-            st.loadJSON(json);
-            //compute node positions and layout
-            st.compute();
-            //optional: make a translation of the tree
-    //    st.geom.translate(new $jit.Complex(-200, 0), "current");
-            //Emulate a click on the root node.
-            st.onClick(st.root);
-            //end
-
-            //init handler
-            //Add an event handler to the add button for
-            //adding a subtree.
-            var animate = document.getElementById('animate');
-            var addButton = document.getElementById('addSubtree');
-//            addButton.onclick = function () {
-//                var type = animate.checked ? "animate" : "replot";
-//                var subtree = json.children.pop();
-//                subtree.id = "node02";
-//                Log.write("adding subtree...");
-//                //add the subtree
-//                st.addSubtree(subtree, type, {
-//                    hideLabels: false,
-//                    onComplete: function () {
-//                        Log.write("subtree added");
-//                    }
-//                });
-//            };
-        }else{
-            console.log('refreshing')
-            st.refresh();
-        }
-        //end
-
-
-    }
-
-
-    //TODO: if tree exits, append only
-    //TODO: tie next node to choice
+    setSocket(io.connect('http://localhost:3000'))
 </script>
 
-
 <script>
-    var socket = io.connect('http://localhost:3000');
+
     socket.on('news', function (data) {
         console.log(data);
-        socket.emit('my other event', { my: 'data' });
+
     });
-    socket.on('graph', function (data) {
-        console.log(data)
-        init(data.items[0]);
-    });
+
 </script>
 
 
