--- a/views/partials/part.html
+++ b/views/partials/part.html
@@ -5,7 +5,7 @@
         <label for="nodeId" class="col-sm-2 control-label">Story Node Id:</label>
 
         <div class="col-sm-10">
-            <input class="form-control" id="nodeId" name="nodeId" type="text" placeholder="id" disabled/>
+            <input class="form-control" id="nodeId" name="nodeId" type="text" placeholder="{{data.newNodeId}}" value="{{data.newNodeId}}" disabled/>
         </div>
     </div>
 
@@ -13,7 +13,7 @@
         <label for="dayNumber" class="col-sm-2 control-label">Day:</label>
 
         <div class="col-sm-10">
-            <input class="form-control" id="dayNumber" name="dayNumber" type="text" placeholder="0" disabled/>
+            <input class="form-control" id="dayNumber" name="dayNumber" type="text" placeholder="{{data.dayNum}}" value="{{data.dayNum}}" disabled/>
         </div>
     </div>
 
@@ -61,7 +61,7 @@
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button id="submission" type="submit" class="btn btn-default {{#if data.disabled}} disabled {{/if}}">Submit</button>
         </div>
     </div>
 
