--- a/views/partials/part.html
+++ b/views/partials/part.html
@@ -57,7 +57,7 @@
 
 
 
-    <input type="hidden" name="_method" value="put">
+    <!--<input type="hidden" name="_method" value="put">-->
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
