--- a/views/partials/part.html
+++ b/views/partials/part.html
@@ -1,21 +1,11 @@
+<div>Story Node Id: <span id="newNodeId">{{data.newNodeId}}</span><br/>
+Day Number: {{data.dayNum}}</div>
 <form class="form-horizontal" role="form" method="post" action="/">
 
 
-    <div class="form-group">
-        <label for="nodeId" class="col-sm-2 control-label">Story Node Id:</label>
 
-        <div class="col-sm-10">
-            <input class="form-control" id="nodeId" name="nodeId" type="text" placeholder="{{data.newNodeId}}" value="{{data.newNodeId}}" disabled/>
-        </div>
-    </div>
+    <input type="hidden" id="newNodeId2" name="newnode" type="text" value="{{data.newNodeId}}"/>
 
-    <div class="form-group">
-        <label for="dayNumber" class="col-sm-2 control-label">Day:</label>
-
-        <div class="col-sm-10">
-            <input class="form-control" id="dayNumber" name="dayNumber" type="text" placeholder="{{data.dayNum}}" value="{{data.dayNum}}" disabled/>
-        </div>
-    </div>
 
 
     <div class="form-group">
@@ -27,13 +17,11 @@
     </div>
 
 
-
-
     <div class="form-group">
-        <label for="copy" class="col-sm-2 control-label">Story Copy:</label>
+        <label for="text" class="col-sm-2 control-label">Story Copy:</label>
 
-        <div class="col-sm-10"><textarea class="form-control" id="copy" rows="3" placeholder="copy"
-                                         name="copy"></textarea></div>
+        <div class="col-sm-10"><textarea class="form-control" id="text" rows="3" placeholder="copy"
+                                         name="text"></textarea></div>
     </div>
 
 
@@ -53,15 +41,13 @@
     </div>
 
 
-
-
-
-
     <!--<input type="hidden" name="_method" value="put">-->
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button id="submission" type="submit" class="btn btn-default {{#if data.disabled}} disabled {{/if}}">Submit</button>
+            <button id="submission" type="submit" class="btn btn-default {{#if data.disabled}} disabled {{/if}}">
+                Submit
+            </button>
         </div>
     </div>
 
