delete in place

--- a/views/partials/part.html
+++ b/views/partials/part.html
@@ -1,5 +1,14 @@
 <div>Story Node Id: <span id="newNodeId">{{data.newNodeId}}</span><br/>
 Day Number: {{data.dayNum}}</div>
+
+
+        <form class="form-horizontal" role="form" method="post" action="/">
+            <input type="text" name="delete" value="true"/>
+            <input type="text" id="nodeToDelete" name="nodeId" value=""/>
+            <button id="hiddenSubmit" type="submit">Submit Delete</button>
+        </form>
+
+
 <form class="form-horizontal" role="form" method="post" action="/">
 
 
@@ -52,3 +61,4 @@ Day Number: {{data.dayNum}}</div>
     </div>
 
 </form>
+
