--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,30 @@
 </head>
 <body>
 
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Delete Node</h4>
+            </div>
+            <div class="modal-body">
+               Delete this node and all its children?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button id="yes" type="button" class="btn btn-primary">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 <div class="container">
     <div class="col-md-12">
         <h1>Story Generator</h1>
@@ -53,7 +77,6 @@
 </script>
 
 <div id="infovis" class="clearfix"></div>
-<div id="log"></div>
 
 
 
